<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="25dp"
        android:backgroundTintMode="src_atop"
        android:src="@drawable/beacon_new"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/beacons_feature"
            android:layout_gravity="center"
            android:textColor="@color/button"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragBeacons_String_2"
            android:textColor="@color/button"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="30dp"
            />
        <Button
            android:id="@+id/beacons_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:fontFamily="sans-serif"
            android:text="@string/search_for_beacons"
            android:textColor="@color/white"
            android:textSize="23sp"
            />
    </LinearLayout>

</LinearLayout>