<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/actShopProfile_Layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/grad"
            android:paddingBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/actShopProfile_iv_shopProfile"
                android:layout_width="171dp"
                android:layout_height="171dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:src="@drawable/nopic"
                app:civ_border_color="#c9b6b6"
                app:civ_border_width="01dp" />

            <TextView
                android:id="@+id/actShopProfile_tv_shopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/actShopProfile_iv_shopProfile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif"
                android:text="@string/shop_name"
                android:textColor="@color/button"
                android:textSize="32sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/actShopProfile_tv_shopCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/actShopProfile_tv_shopName"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/category"
                android:textAllCaps="true"
                android:textColor="@color/button"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/actShopProfile_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actShopProfile_Layout_1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/actShopProfile_btn_shopLocation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/button"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/map"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gallrybttn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/button"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/actShopProfile_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actShopProfile_layout_2"
            android:layout_margin="@dimen/value_2dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="@dimen/value_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_email_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/button"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/ema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/joey_sharenofood_com"
                android:textColor="@color/button"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/actShopProfile_Layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actShopProfile_layout_email"
            android:layout_margin="@dimen/value_2dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="@dimen/value_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_phone_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/button"
                    android:textSize="19sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/phn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="+1-202-555-0157"
                android:textColor="@color/button"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/actShopProfile_Layout_phone"
            android:id="@+id/actShopProfile_layout_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_2dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="@dimen/value_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_web_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textColor="@color/button"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/joey_sharenofood_com"
                android:textColor="@color/button"
                android:textSize="@dimen/text_size_18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/actShopProfile_layout_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/button"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="@dimen/value_2dp"
                android:textColor="@color/button"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
